// Vitest Snapshot v1

exports[`Report > loadFromFile > it should load a json report with minimal node modules 1`] = `
Report {
  "dependencies": {},
  "latestPackages": {},
  "pluginInfo": {},
  "root": {
    "dependencies": [],
    "name": "",
    "version": "",
  },
  "suggestions": [],
}
`;

exports[`Report > loadFromFile > it should load a json report with minimal node modules 2`] = `
Report {
  "dependencies": {
    "left-pad@1.3.0": {
      "dependencies": [],
      "metadata": {
        "pathsOnDisk": [
          "/node_modules/left-pad",
        ],
        "size": {
          "files": 10,
          "physical": 9752,
        },
      },
      "name": "left-pad",
      "type": "prod",
      "version": "1.3.0",
    },
  },
  "latestPackages": {},
  "pluginInfo": {},
  "root": {
    "dependencies": [],
    "metadata": {
      "pathsOnDisk": [
        "",
      ],
    },
    "name": "min-node-modules",
    "version": "1.0.0",
  },
  "suggestions": [
    {
      "actions": [],
      "id": "packagesWithPinnedVersions",
      "message": "There are currently 0 pinned dependencies",
      "name": "Packages with pinned dependencies",
    },
    {
      "actions": [],
      "id": "packagesWithExtraArtifacts",
      "message": "There are currently 0 extra artifacts",
      "name": "Packages with extra artifacts",
    },
    {
      "actions": [],
      "id": "notBeingAbsorbedByTopLevel",
      "message": "There are currently 0 duplicate packages being installed on disk",
      "name": "Dependencies not being absorbed",
    },
    {
      "actions": [],
      "id": "nestedDependencyFreshness",
      "message": "Out of the total 1 sub packages currently installed; 0 major versions out of date (0.00%), 0 minor versions out of date (0.00%), 0 patch versions out of date (0.00%)",
      "name": "Nested Dependency Freshness",
    },
    {
      "actions": [],
      "id": "topLevelDepsFreshness",
      "message": "Out of the total 1 explicit dependencies defined in the package.json; 0 major versions out of date (0.00%), 0 minor versions out of date (0.00%), 0 patch versions out of date (0.00%)",
      "name": "Top Level Dependency Freshness",
    },
  ],
}
`;

exports[`Report > loadFromFile > it should load a simple json report 1`] = `
Report {
  "dependencies": {},
  "latestPackages": {},
  "pluginInfo": {},
  "root": {
    "dependencies": [],
    "name": "",
    "version": "",
  },
  "suggestions": [],
}
`;

exports[`Report > loadFromFile > it should load a simple json report 2`] = `
Report {
  "dependencies": {},
  "latestPackages": {},
  "pluginInfo": {},
  "root": {
    "dependencies": [],
    "metadata": {
      "pathsOnDisk": [
        "",
      ],
    },
    "name": "no-node-modules",
    "version": "1.0.0",
  },
  "suggestions": [
    {
      "actions": [],
      "id": "packagesWithPinnedVersions",
      "message": "There are currently 0 pinned dependencies",
      "name": "Packages with pinned dependencies",
    },
    {
      "actions": [],
      "id": "packagesWithExtraArtifacts",
      "message": "There are currently 0 extra artifacts",
      "name": "Packages with extra artifacts",
    },
    {
      "actions": [],
      "id": "notBeingAbsorbedByTopLevel",
      "message": "There are currently 0 duplicate packages being installed on disk",
      "name": "Dependencies not being absorbed",
    },
    {
      "actions": [],
      "id": "nestedDependencyFreshness",
      "message": "Out of the total 0 sub packages currently installed; 0 major versions out of date (NaN%), 0 minor versions out of date (NaN%), 0 patch versions out of date (NaN%)",
      "name": "Nested Dependency Freshness",
    },
    {
      "actions": [],
      "id": "topLevelDepsFreshness",
      "message": "Out of the total 0 explicit dependencies defined in the package.json; 0 major versions out of date (NaN%), 0 minor versions out of date (NaN%), 0 patch versions out of date (NaN%)",
      "name": "Top Level Dependency Freshness",
    },
  ],
}
`;

exports[`Report > serializeReport > it should serialize "latestPackages" 1`] = `
{
  "latestPackages": {
    "bar": "7.33.1",
    "foo": "1.33.7",
  },
}
`;

exports[`Report > serializeReport > it should serialize a project with minimal node modules 1`] = `
{
  "latestPackages": {},
}
`;

exports[`Report > serializeReport > it should serialize a serialize a simple report 1`] = `
{
  "latestPackages": {},
}
`;
